# haleon-ai-assistant

./: .env.example  .gitignore  Dockerfile  README.md  SafetyAgent integration  agents-core.patch  api-orchestrator.patch  docker-compose.yml  ingestion-prompts.patch  pyproject.toml  requirements-dev.txt  requirements.txt  tools-stubs.patch
.github/workflows/: cd.yml  ci.yml
docs/: agent-design.md  architecture.md  deployment-guide.md  runbook.md
infra/: deploy.sh  main.bicep
infra/modules/: apim.bicep  app-insights.bicep  content-safety.bicep  eventhub.bicep  keyvault.bicep  monitoring.bicep  networking.bicep  openai.bicep  redis.bicep  search.bicep  storage.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam  staging.bicepparam
src/haleon_assistant/: __init__.py  config.py  main.py
src/haleon_assistant/agents/: __init__.py  orchestrator.py  pharmacovigilance.py  pharmacovigilance_agent.py  retrieval.py  retrieval_agent.py  safety_agent.py  synthesis.py  synthesis_agent.py  triage.py  triage_agent.py
src/haleon_assistant/ingestion/: chunker.py  embedder.py  indexer.py  pipeline.py
src/haleon_assistant/models/: schemas.py
src/haleon_assistant/prompts/: pharmacovigilance_rules.txt  retrieval_system.txt  safety_rules.txt  synthesis_system.txt  (+1 more)
tests/: conftest.py  test_agents.py  test_chat.py  test_feedback.py  test_health.py
tests/integration/: test_e2e_flow.py
tests/red_team/: test_compliance.py  test_hallucination.py  test_jailbreak.py  test_medical_claims.py
tests/unit/: test_retrieval_agent.py  test_safety_agent.py  test_triage_agent.py
(+14 files in other folders)
