[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haleon-ai-assistant"
version = "0.1.0"
description = "Haleon AI Assistant powered by AutoGen and Azure"
requires-python = ">=3.10"
dependencies = [
    "autogen-ext[azure,openai]",
    "autogen-agentchat",
    "fastapi[standard]",
    "azure-search-documents>=11.4.0",
    "azure-ai-contentsafety",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-storage-blob",
    "redis",
    "python-dotenv",
    "uvicorn",
]

[project.scripts]
haleon-assistant = "haleon_assistant.main:main"

[tool.setuptools.packages.find]
where = ["src"]
